# highlights

./: INSTALL.md  README.md  dev.sh  pyproject.toml
.playwright-mcp/: page-2026-06-17T06-24-59-492Z.yml  page-2026-06-17T07-28-26-379Z.yml  page-2026-06-17T07-29-02-410Z.yml  page-2026-06-18T02-21-13-932Z.yml  page-2026-06-18T02-21-54-580Z.yml  page-2026-06-18T02-22-09-907Z.yml  page-2026-06-18T03-07-24-367Z.yml  page-2026-06-18T03-07-41-470Z.yml  page-2026-06-18T03-07-58-790Z.yml  page-2026-06-18T05-50-28-637Z.yml  page-2026-06-18T06-44-52-755Z.yml  page-2026-06-18T07-01-11-329Z.yml  page-2026-06-18T07-01-19-379Z.yml
app/: config.py  deps.py  desktop.py  main.py  paths.py  workdir.py
app/analyzer/: audio.py  motion.py  onsets.py  pipeline.py  segment.py  serve.py
app/api/: jobs.py  routes.py  state.py
app/eval/: metrics.py
app/exporter/: ffmpeg.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts  (+2 more)
packaging/: CherryPickle.spec  build_mac.sh  fetch_ffmpeg.sh  release.sh
pickleball_highlights.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: eval.py
tests/: conftest.py  test_api.py  test_audio.py  test_config.py  test_deps.py  test_deps_ffmpeg.py  test_desktop.py  test_drafts.py  test_eval.py  test_exporter.py  test_jobs.py  test_library.py  test_motion.py  test_onsets.py  test_output.py  test_paths.py  test_pipeline.py  test_progress.py  test_rename.py  test_segment.py  test_serve.py  test_workdir.py
(+134 files in other folders)
